--- a/.gitlab/os-macos.yml
+++ b/.gitlab/os-macos.yml
@@ -22,6 +22,13 @@
         # could run at the same time, so we drop it.
         GIT_CLONE_PATH: "$CI_BUILDS_DIR/paraview-ci"
 
+.macos_python_qt:
+    extends: .macos_build
+
+    variables:
+        CMAKE_CONFIGURATION: macos_python_qt
+        CTEST_NO_WARNINGS_ALLOWED: 1
+
 ## Tags
 
 .macos_builder_tags:
@@ -71,3 +78,4 @@
         - *before_script_macos
         - ctest --output-on-failure -V -S .gitlab/ci/ctest_test.cmake
     interruptible: true
+    timeout: 2 hours
