IOEnSight: only run MPI tests when MPI is enabled

--- a/VTKExtensions/IOEnSight/Testing/Cxx/CMakeLists.txt
+++ b/VTKExtensions/IOEnSight/Testing/Cxx/CMakeLists.txt
@@ -1,4 +1,6 @@
-vtk_add_test_mpi(vtkPVVTKExtensionsIOEnSightTests tests
-  TESTING_DATA NO_VALID
-  TestPEnSightBinaryGoldReader.cxx)
-vtk_test_cxx_executable(vtkPVVTKExtensionsIOEnSightTests tests)
+if (PARAVIEW_USE_MPI)
+  vtk_add_test_mpi(vtkPVVTKExtensionsIOEnSightTests tests
+    TESTING_DATA NO_VALID
+    TestPEnSightBinaryGoldReader.cxx)
+  vtk_test_cxx_executable(vtkPVVTKExtensionsIOEnSightTests tests)
+endif ()
