--- a/.gitlab/os-linux.yml
+++ b/.gitlab/os-linux.yml
@@ -9,7 +9,7 @@
 # newer compilers.
 
 .centos7:
-    image: "kitware/paraview:ci-superbuild-centos7-20200210"
+    image: "kitware/paraview:ci-centos7-20200907"
 
     variables:
         GIT_SUBMODULE_STRATEGY: none
@@ -39,10 +39,6 @@
         paraview_spec: "paraview+osmesa^mesa~glx^mpich"
 
     before_script:
-        # [-- these must be added to the image.
-        - yum install -y bzip2 patch
-        - yum clean all
-        # ---]
         - .gitlab/ci/sccache.sh
         - .gitlab/ci/cmake.sh
         - export PATH=$PWD/.gitlab:$PWD/.gitlab/cmake/bin:$PATH
@@ -99,7 +95,6 @@
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i $GITHUB_SSH_PRIVATE_KEY"
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && chmod 600 $GITHUB_SSH_PRIVATE_KEY
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && PARAVIEW_DOCS_REPO="ssh://git@github.com/kitware/paraview-docs"
-        - yum install -y bzip2 patch python-twisted-core python-twisted-web python-twisted-words python3 python3-devel qt5-qtbase-devel qt5-qttools-devel qt5-qtsvg-devel qt5-qtxmlpatterns-devel doxygen openmpi-devel python36-numpy
         - pip3 install sphinx
         - .gitlab/ci/sccache.sh
         - git clone $PARAVIEW_DOCS_REPO paraview-docs
