--- a/.gitlab/artifacts.yml
+++ b/.gitlab/artifacts.yml
@@ -8,6 +8,7 @@
             - compile_output.log
             - doxygen_output.log
             - prepare_output.log
+            - paraview-docs-doxygen.tgz
 
 .cmake_build_artifacts:
     artifacts:
