--- a/.gitlab/os-linux.yml
+++ b/.gitlab/os-linux.yml
@@ -9,7 +9,7 @@
 # newer compilers.
 
 .centos7:
-    image: "kitware/paraview:ci-centos7-20200907"
+    image: "kitware/paraview:ci-centos7-20200911"
 
     variables:
         GIT_SUBMODULE_STRATEGY: none
@@ -79,9 +79,12 @@
 .before_script_linux: &before_script_linux
     - .gitlab/ci/cmake.sh
     - .gitlab/ci/ninja.sh
-    - export PATH=$PWD/.gitlab:$PWD/.gitlab/cmake/bin:$PATH
+    - .gitlab/ci/doxygen.sh
+    - .gitlab/ci/sccache.sh
+    - export PATH=$PWD/.gitlab:$PWD/.gitlab/cmake/bin:$PWD/.gitlab/doxygen/bin:$PATH
     - cmake --version
     - ninja --version
+    - doxygen --version
     - "git submodule update --init --recursive || :"
     - git submodule foreach --recursive cmake "-Dusername:STRING=$CI_PROJECT_NAMESPACE" "-Durl_prefix:STRING=https://$CI_SERVER_HOST" -P "$PWD/.gitlab/ci/fetch_submodule.cmake"
     - git submodule sync --recursive
@@ -89,24 +92,26 @@
 
 .doxygen_build_linux:
     stage: package
+    needs: []
 
     script:
         - *before_script_linux
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i $GITHUB_SSH_PRIVATE_KEY"
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && chmod 600 $GITHUB_SSH_PRIVATE_KEY
         - test -n "$GITHUB_SSH_PRIVATE_KEY" && PARAVIEW_DOCS_REPO="ssh://git@github.com/kitware/paraview-docs"
-        - pip3 install sphinx
-        - .gitlab/ci/sccache.sh
         - git clone $PARAVIEW_DOCS_REPO paraview-docs
-        - mkdir build
+        - mkdir -p build
         - cd build
-        - $LAUNCHER cmake -DCMAKE_PREFIX_PATH=/usr/lib64/openmpi -DPARAVIEW_USE_PYTHON=ON -DVTK_WRAP_PYTHON=ON -DVTK_ENABLE_WRAPPING=ON -DPARAVIEW_BUILD_DEVELOPER_DOCUMENTATION=ON -DPARAVIEW_USE_MPI=ON ..
+        - echo "$PARAVIEW_DOCS_REPO  $GIT_SSH_COMMAND"
+        - $LAUNCHER cmake -DCMAKE_PREFIX_PATH=/usr/lib64/openmpi -DPARAVIEW_USE_PYTHON=ON -DVTK_WRAP_PYTHON=ON \
+          -DVTK_ENABLE_WRAPPING=ON -DPARAVIEW_BUILD_DEVELOPER_DOCUMENTATION=ON -DPARAVIEW_USE_MPI=ON \
+          -DPARAVIEW_BUILD_EDITION=CATALYST -DDOCUMENTATION_HTML_TARZ=ON ..
         - cmake --build . -j &> $GIT_CLONE_PATH/compile_output.log
         - make ParaViewDoc-TGZ &> $GIT_CLONE_PATH/doxygen_output.log
         - cd $GIT_CLONE_PATH/paraview-docs
-        - CURRENT_RELEASE=nightly
         - test -n "$CI_COMMIT_TAG" && CURRENT_RELEASE="$CI_COMMIT_TAG"
-        - $LAUNCHER ./scripts/prepare-doc.sh "$GIT_CLONE_PATH" "$GIT_CLONE_PATH/build" "$GIT_CLONE_PATH" "$CURRENT_RELEASE" &> $GIT_CLONE_PATH/prepare_output.log
+        - test -n "$GITHUB_SSH_PRIVATE_KEY" && $LAUNCHER bash -x ./scripts/prepare-doc.sh "$GIT_CLONE_PATH" "$GIT_CLONE_PATH/build" "$GIT_CLONE_PATH" "$CURRENT_RELEASE" &> $GIT_CLONE_PATH/prepare_output.log
+        - tar czf $GIT_CLONE_PATH/paraview-docs-doxygen.tgz $GIT_CLONE_PATH/build/doc
 
     variables:
         PARAVIEW_DOCS_REPO: https://github.com/Kitware/paraview-docs.git
