ExtractGenerators: Tooltips errors for wrong input domain
Signed-off-by: Vicente Adolfo Bolea Sanchez <vicente.bolea@kitware.com>

--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -130,6 +130,7 @@ set(classes
   pqManageLinksReaction
   pqManagePluginsReaction
   pqMasterOnlyReaction
+  pqMenuReactionUtils
   pqModelTransformSupportBehavior
   pqMoleculePropertyWidget
   pqMultiComponentsDecorator
