--- a/Remoting/Views/CMakeLists.txt
+++ b/Remoting/Views/CMakeLists.txt
@@ -132,6 +132,7 @@ set(classes
   vtkSMChartSeriesListDomain
   vtkSMChartSeriesSelectionDomain
   vtkSMChartUseIndexForAxisDomain
+  vtkSMCinemaVolumetricImageExtractWriterProxy
   vtkSMComparativeAnimationCueProxy
   vtkSMComparativeAnimationCueUndoElement
   vtkSMComparativeViewProxy
