Initial check-in of the LookingGlass plugin for ParaView
Adds option PARAVIEW_ENABLE_LOOKINGGLASS

The LookingGlass plugin for ParaView enables rendering a scene in a
RenderView on Looking Glass 3D displays. This plugin depends on the
VTK remote module RenderingLookingGlass.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,10 +194,17 @@ if (PARAVIEW_USE_PYTHON AND PARAVIEW_BUILD_TESTING)
   include(FindPythonModules)
 endif()
 
+set(paraview_features_needing_remote_modules
+  PARAVIEW_ENABLE_MOMENTINVARIANTS
+  PARAVIEW_ENABLE_LOOKINGGLASS)
 set(use_vtk_remote_modules OFF)
-if (PARAVIEW_ENABLE_MOMENTINVARIANTS)
-  set(use_vtk_remote_modules ON)
-endif ()
+foreach (option IN LISTS paraview_features_needing_remote_modules)
+  if (${option})
+    set(use_vtk_remote_modules ON)
+    message(STATUS "Enabling remote modules for ${option}")
+    break()
+  endif ()
+endforeach ()
 
 if (PARAVIEW_USE_FORTRAN)
   enable_language(Fortran OPTIONAL)
@@ -421,6 +428,9 @@ else ()
   if (use_vtk_remote_modules)
     if (PARAVIEW_ENABLE_MOMENTINVARIANTS)
       set(VTK_MODULE_ENABLE_VTK_MomentInvariants WANT)
+    endif()
+    if (PARAVIEW_ENABLE_LOOKINGGLASS)
+      set(VTK_MODULE_ENABLE_VTK_RenderingLookingGlass WANT)
     endif()
     # include the Remote module
     include("${CMAKE_CURRENT_SOURCE_DIR}/VTK/CMake/vtkDownload.cmake")
