--- a/VTKExtensions/FiltersPython/CMakeLists.txt
+++ b/VTKExtensions/FiltersPython/CMakeLists.txt
@@ -32,6 +32,7 @@
 set(classes
   vtkAnnotateAttributeDataFilter
   vtkAnnotateGlobalDataFilter
+  vtkCDBWriter
   vtkPythonAnnotationFilter
   vtkPythonCalculator
   vtkPythonProgrammableFilter
@@ -42,4 +43,5 @@ vtk_module_add_module(ParaView::VTKExtensionsFiltersPython
 
 paraview_add_server_manager_xmls(
   XMLS  Resources/python_filters.xml
+        Resources/python_misc.xml
         Resources/python_sources.xml)
