--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -26,6 +26,7 @@ set(python_files
   paraview/detail/annotation.py
   paraview/detail/calculator.py
   paraview/detail/catalyst_export.py
+  paraview/detail/cdbwriter.py
   paraview/detail/exportnow.py
   paraview/detail/extract_selection.py
   paraview/detail/loghandler.py
