gitlab-ci: fix fetch_submodule.cmake to work with 13.4
13.4 now puts some pipelines in the target project. Adapt the script to
support these cases.

The script now also fetches all relevant information from the
environment itself.

--- a/.gitlab/os-linux.yml
+++ b/.gitlab/os-linux.yml
@@ -127,7 +127,7 @@
         - export PATH=$PWD/.gitlab:$PWD/.gitlab/cmake/bin:$PATH
         - cmake --version
         - "git submodule update --init --recursive || :"
-        - git submodule foreach --recursive cmake "-Dusername:STRING=$CI_PROJECT_NAMESPACE" "-Durl_prefix:STRING=https://$CI_SERVER_HOST" -P "$PWD/.gitlab/ci/fetch_submodule.cmake"
+        - git submodule foreach --recursive cmake -P "$PWD/.gitlab/ci/fetch_submodule.cmake"
         - git submodule sync --recursive
         - git submodule update --init --recursive
         - sccache --start-server
