--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ stages:
     - build
     - test
     - package
-    - deploy
 
 ################################################################################
 # Job declarations
@@ -66,7 +65,8 @@ test:macos-python-qt:
 # Deployment
 
 ## Documentation
-deploy:documentation:
+
+build:documentation:
     extends:
         - .centos7
         - .doxygen_build_linux
