--- a/.gitlab/os-linux.yml
+++ b/.gitlab/os-linux.yml
@@ -91,7 +91,7 @@
     - git submodule update --init --recursive
 
 .doxygen_build_linux:
-    stage: deploy
+    stage: build
     environment:
       name: documentation
       url: https://kitware.github.io/paraview-docs/latest/cxx/
