--- a/Clients/PythonCatalyst/CMakeLists.txt
+++ b/Clients/PythonCatalyst/CMakeLists.txt
@@ -41,8 +41,18 @@ set(catalyst_fortran_using_mangling)
 if (CMAKE_Fortran_COMPILER_WORKS)
   include(FortranCInterface)
   FortranCInterface_HEADER(FortranPythonAdaptorAPIMangling.h
-    SYMBOLS coprocessorinitializewithpython coprocessoraddpythonscript)
-  set(catalyst_fortran_using_mangling "${FortranCInterface_GLOBAL_FOUND}")
+    SYMBOLS
+      coprocessorinitializewithpython
+      coprocessoraddpythonscript)
+
+  if (FortranCInterface_GLOBAL_PREFIX OR
+      FortranCInterface_GLOBAL_SUFFIX OR
+      (NOT FortranCInterface_GLOBAL_CASE STREQUAL "LOWER"))
+    set(catalyst_fortran_using_mangling "${FortranCInterface_GLOBAL_FOUND}")
+  else()
+    # otherwise there's no mangling necessary for Fortran/C interchange and
+    # hence we leave catalyst_fortran_using_mangling unset.
+  endif()
 
   list(APPEND classes
     FortranPythonAdaptorAPI)
