add an usage logger.
Adding a new behavior (pqUsageLoggingBehavior) to ping a web-service to
log each time a ParaView-based application is started. All metadata
about which server to ping and parameters to pass to it are provided
through a configuration file.

This behavior is disabled by default so that custom ParaView-based
applications don't inherit it. The behavior is explicitly enabled in
ParaViewMainWindow.

Fixes #20267.

--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -194,6 +194,7 @@ set(classes
   pqTransferFunctionWidgetPropertyWidget
   pqUndoRedoBehavior
   pqUndoRedoReaction
+  pqUsageLoggingBehavior
   pqUseSeparateColorMapReaction
   pqVCRToolbar
   pqVerifyRequiredPluginBehavior
@@ -271,6 +272,7 @@ set(resource_files
   Resources/pqApplicationComponents.qrc)
 
 set(qt_components
+  Network
   Widgets
   Svg)
 
@@ -306,7 +308,8 @@ vtk_module_add_module(ParaView::pqApplicationComponents
 vtk_module_link(ParaView::pqApplicationComponents
   PRIVATE
     Qt5::Widgets
-    Qt5::Svg)
+    Qt5::Svg
+    Qt5::Network)
 if (PARAVIEW_USE_QTHELP)
   vtk_module_link(ParaView::pqApplicationComponents
     PRIVATE
